<resources>
    <string name="app_name">Work Tracking Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="no_word">No New Word Yet</string>
    <string name="no_completed_word">No have completed Word Yet</string>
    <string name="sort_by">Sort By</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="sort_order">Sort Order</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="meaning">Meaning</string>
    <string name="synonym">Synonym</string>
    <string name="details">Details</string>
    <string name="update">Update</string>
    <string name="word_detail">Word Detail</string>
    <string name="fab_button">fabButton</string>
    <string name="add_new">Add New</string>
    <string name="add">Add</string>
    <string name="add_new_word">Add New Word</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>