<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="addViewModel"
            type="com.alvin.wordapplicationindividualproject.ui.add.AddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.viewDoneDelete.ViewDoneDeleteFragment">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:shadowColor="@color/black"
            android:text="@string/add_new_word"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/l"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etTitle"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:inputType="textMultiLine"
            android:maxLines="1"
            android:padding="@dimen/s"
            android:background="@drawable/edittext_background"
            android:text="@={addViewModel.title}"
            app:layout_constraintBottom_toTopOf="@+id/etMeaning"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/tvMeaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meaning"
            android:textSize="@dimen/l"
            android:textStyle="bold" app:layout_constraintBottom_toTopOf="@+id/etMeaning"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <EditText
            android:id="@+id/etMeaning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/s"
            android:text="@={addViewModel.meaning}"
            android:background="@drawable/edittext_background"
            android:minLines="1"
            android:inputType="textMultiLine"
            android:maxLines="2"
            app:layout_constraintBottom_toTopOf="@+id/etSynonym"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />

        <TextView
            android:id="@+id/tvSynonym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/synonym"
            android:textSize="@dimen/l"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etSynonym"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <EditText
            android:id="@+id/etSynonym"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/s"
            android:text="@={addViewModel.synonym}"
            android:background="@drawable/edittext_background"
            android:minLines="1"
            android:inputType="textMultiLine"
            android:maxLines="2"
            app:layout_constraintBottom_toTopOf="@+id/etDetails"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/etMeaning" />

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/details"
            android:textSize="@dimen/l"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etDetails"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <EditText
            android:id="@+id/etDetails"
            android:layout_width="0dp"
            android:padding="@dimen/s"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:minLines="2"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:text="@={addViewModel.details}"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/etSynonym" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/add"
            android:onClick="@{() -> addViewModel.submit()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>